[package]
name = "renfe-cli"
version = "5.2.0"
edition = "2021"
authors = ["Gerard C.L. <gerardcl@gmail.com>"]
license = "BSD-3-Clause"
description = "CLI for searching Renfe train timetables in the Spanish country"
readme = "README.md"
homepage = "https://github.com/gerardcl/renfe-cli"
repository = "https://github.com/gerardcl/renfe-cli"
keywords = ["cli", "timetables", "trains", "renfe", "spain"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "renfe_cli"
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py37"] }
getopts = "0.2"
chrono = "0.4"
gtfs-structures = { version = "0.41", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
